# rss_telegram_bot

./: .gitignore  Cargo.toml  Dockerfile  docker-compose.yml
.github/workflows/: rust.yml
src/: background.rs  data.rs  main.rs
src/data/: mod.rs  notification.rs  state.rs
