[package]
name = "rss_telegram_bot"
version = "0.1.0"
authors = ["Trangar <victor.koenders@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.0", features = ["full"] }
reqwest = "0.11"
rss = "1.10"
telegram-bot =  { git = "https://github.com/telegram-rs/telegram-bot/"  }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15"
futures = "0.3"
rand = "0.8"
lazy_static = "1.4"
pretty_env_logger = "0.4.0"

[dependencies.openssl]
version = "0.10"
features = ["vendored"]

